[package]
name = "wsvsock"
version = "0.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>", "Vasek Sraier <git@vakabus.cz>"]
description = "WebSocket to Firecracker's Virtio-vsock proxy server"
homepage = "https://github.com/vakabus/wsvsock"
repository = "https://github.com/vakabus/wsvsock"
readme = "README.md"
keywords = ["websocket", "proxy", "virtio-vsock", "firecracker"]
license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.0"
base64 = "0.13"
bytecodec = "0.4"
byteorder = "1"
clap = "2"
httpcodec = "0.2"
regex = "1.9.1"
sha-1 = "0.9"
slog = {version = "2", features = ["release_max_level_debug"]}
sloggers = "2"
trackable = "1"
